--- a/css/about.css
+++ b/css/about.css
@@ -120,8 +120,15 @@
 		padding-top: 73px;
 	}
 	.contact h4{
-		margin-top: 65px;padding-left: 20px;
+		margin-top: 65px;
 		font-size: 20px;line-height: 25px;
+	}
+	.contact h4:before{
+		content: '';
+		display: inline-block;
+		margin-right: 20px;
+		width: 2px;height: 16px;
+		background: #2d2d2d;
 	}
 	.contact h5{
 		margin-top: 22px;
