gnb 수정, css수정, qna문의기능추가진행

--- a/css/prod.css
+++ b/css/prod.css
@@ -71,14 +71,14 @@
 		margin: 124px 30px 0 0;
 	}
 	.sm100 .content-row.first-child ul{
-		float: left;
+		margin-top: 265px;margin-left: 604px;
 		color: #f00;
-		margin-top: 265px;
 	}
 	.sm100 .content-row.first-child li{
+		padding-left: 20px;
+		background: url(../img/main/ir_icon.png) no-repeat -250px -306px;
 		text-align: left;
-		list-style-type: square;
-		list-style-position: inside;
+		font-size: 16px;line-height: 32px;
 	}
 	.sm100 .feats{
 		margin-top: 170px;
