--- a/css/faq.css
+++ b/css/faq.css
@@ -11,6 +11,8 @@
 	font-family: 'wHYGothic_A1_200';
 }
 .faq .content-head h4,
+.faq .view-head h4,
+.faq .view-head-info span,
 .faq table th{
 	font-family: 'wHYGothic_A1_600'
 }
@@ -84,6 +86,7 @@
 	.qna .content-row.first-row{
 		margin-top: 124px;
 	}
+	
 	.qna form{
 		clear: both;float: none;
 		padding-bottom: 100px;
