--- a/css/adas.css
+++ b/css/adas.css
@@ -7,7 +7,7 @@
 }
 .slide-addit{
 	position: absolute;
-	bottom: 0;right: 0;
+	bottom: 0;right: 0;z-index: 100;
 	overflow: hidden;
 }
 .ctrl-box{
@@ -25,10 +25,24 @@
 	overflow: hidden;
 	background: #828282;color: #fff;
 }
-.text-box dl:first-child dt{
+.text-box dl dt{
 	font-family: 'wHYGothic_A1_250';font-size: 32px;color: #fff;
 }
-.text-box dl:first-child dt span{
+.text-box dl{
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	-khtml-opacity: 0;
+	-moz-opacity: 0;
+	opacity: 0;
+}
+.text-box dl:first-child{
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	-khtml-opacity: 1;
+	-moz-opacity: 1;
+	opacity: 1;
+}
+.text-box dl dt span{
 	font-family: 'wHYGothic_A1_880';font-size: 32px;color: #fff;
 }
 .text-box dd{
@@ -48,7 +62,9 @@
 @media(min-width: 320px){
 	.slide-addit{
 		width: 100%;
-
+	}
+	#slide_rows{
+		height: 254px;
 	}
 	.ctrl-box{
 		float: none;
@@ -59,35 +75,36 @@
 		margin-left: 0px; 
 		width:22px;height:22px;
 	}
-	.ctrl-box .slide-ctrl-prev{
+	.ctrl-box .slide-prev{
 		background-position:-240px -60px
 	}
-	.ctrl-box .slide-ctrl-play{
+	.ctrl-box .slide-play{
 		margin: 0 40px;
 		background-position:-20px -10px;
 	}
-	.ctrl-box .slide-ctrl-next{
+	.ctrl-box .slide-next{
 		margin-right: 0px;
 		background-position:-240px -90px;
 	}
 	.text-box{
-		float: none;
+		float: none;position: relative;
 		width: 100%;height: 37px;
 	}
-	.text-box dl:first-child{
-		padding: 0px 40px 0 22px;
+	.text-box dl{
+		position: absolute;
+		left: 22px;top: 0px;right: 40px;
 	}
-	.text-box dl:first-child dt{
+	.text-box dl dt{
 		float: left;
 		margin-top: 6px;
 		font-size: 21px;color: #fff;
 	}
-	.text-box dl:first-child dt span{
+	.text-box dl dt span{
 		font-size: 21px;color: #fff;
 	}
 	.text-box .link-box{
 		float: right;
-		margin-top: 7px;
+		margin-top: 10px;
 		width:20px;height:20px;
 		background-position:-120px -130px
 	}
@@ -95,7 +112,9 @@
 @media(min-width: 640px){	
 	.slide-addit{
 		width: 100%;
-
+	}
+	#slide_rows{
+		height: 394px;
 	}
 	.ctrl-box{
 		float: left;
@@ -103,6 +122,7 @@
 		text-align: center;
 	}
 	.text-box{
+		position: relative;
 		float: right;
 		width: 63%;height: 33px;
 	}
@@ -110,26 +130,26 @@
 		margin-left: 0px; 
 		width:22px;height:22px;
 	}
-	.ctrl-box .slide-ctrl-prev{
+	.ctrl-box .slide-prev{
 		background-position:-240px -60px
 	}
-	.ctrl-box .slide-ctrl-play{
+	.ctrl-box .slide-play{
 		margin: 0 40px;
 		background-position:-20px -10px;
 	}
-	.ctrl-box .slide-ctrl-next{
+	.ctrl-box .slide-next{
 		margin-right: 0px;
 		background-position:-240px -90px;
 	}
-	.text-box dl:first-child{
+	.text-box dl{
 		padding: 0px 40px 0 22px;
 	}
-	.text-box dl:first-child dt{
+	.text-box dl dt{
 		float: left;
 		margin-top: 3px;
 		font-size: 21px;color: #fff;
 	}
-	.text-box dl:first-child dt span{
+	.text-box dl dt span{
 		font-size: 21px;color: #fff;
 	}
 	.text-box .link-box{
@@ -140,10 +160,48 @@
 	}
 
 }
-@media(min-width: 1054px){
+@media(min-width: 998px){
+	.content-head .gutter{
+		height: 570px;
+	}
+	.slide-addit{
+		left: 50%;bottom: 0;
+		margin-left: 94px;width: 378px;
+	}
+	.slides{
+		position: relative;
+	}
+	.slides li{
+		position: absolute;top: 0;
+		background: url(../img/main/head_slide_01-fs8.png) no-repeat center center;
+		height: 570px;width: 100%;
+	}
+	.slides .slide-2{
+		background: url(../img/main/head_slide_02-fs8.png) no-repeat center center;
+	}
+	.slides .slide-3{
+		background: url(../img/main/head_slide_03-fs8.png) no-repeat center center;
+	}
+}
+
+@media(min-width: 1024px){
 	.slide-addit{
 		left: 50%;margin-left: 94px;
 		width: 378px;
+	}
+	.slides{
+		position: relative;
+	}
+	.slides li{
+		position: absolute;top: 0;
+		background: url(../img/main/head_slide_01-fs8.png) no-repeat center center;
+		height: 570px;width: 100%;
+	}
+	.slides .slide-2{
+		background-image: url(../img/main/head_slide_02-fs8.png) no-repeat center center;
+	}
+	.slides .slide-3{
+		background-image: url(../img/main/head_slide_03-fs8.png) no-repeat center center;
 	}
 	.ctrl-box{
 		float: none;
@@ -152,38 +210,40 @@
 		height: 45px;
 		text-align: right;
 	}
-	.text-box{
-		width: auto;height: auto;
-		float: none;
-	}
 	.ctrl-box button{
 		width:33px;height:33px;
 	}
-	.ctrl-box .slide-ctrl-prev{
+	.ctrl-box .slide-prev{
 		background-position:-160px -60px
 	}
-	.ctrl-box .slide-ctrl-play{
+	.ctrl-box .slide-play{
 		margin: 0px 24px;
 		background-position:-120px -60px;
 	}
-	.ctrl-box .slide-ctrl-next{
+	.ctrl-box .slide-next{
 		margin-right: 20px;
 		background-position:-200px -60px;
 	}
 	.text-box{
+		position: relative;
+		width: auto;float: none;
 		height: 190px;
 		padding: 42px 30px 0;
 	}
-	.text-box dl:first-child{
+	.text-box dl{
+		position: absolute;
+		left: 40px;top: 42px;right: 40px;
+	}
+	.text-box dl{
 		padding-top: 0px;
 		padding: 0;
 	}
-	.text-box dl:first-child dt{
+	.text-box dl dt{
 		float: none;
 		margin-top: 0px;
 		font-size: 32px;color: #fff;
 	}
-	.text-box dl:first-child dt span{
+	.text-box dl dt span{
 		font-size: 32px;color: #fff;
 	}
 	.text-box .link-box{
@@ -195,11 +255,24 @@
 }
 .main .gutter{
 	text-align: left;
+	overflow: hidden;
 }
-.content-head ul li{
-	height: 570px;
-	background: url(../img/main/bg_main-fs8.png) no-repeat center center;
+.main .content-head ul li{
+	position: absolute;left: 0;top: 0;
+	width: 100%;
+	/*background: url(../img/main/head_slide_01-fs8.png) no-repeat center center;*/
 }
+.content-head ul li.slide-2{
+	left: 100%;
+	/*background-image: url(../img/main/head_slide_02-fs8.png);*/
+}
+.content-head ul li.slide-3{
+	left: 100%;
+	/*background-image: url(../img/main/head_slide_03-fs8.png);*/
+}
+
+
+
 /*------------    feature    ------------*/
 .arr-down{
 	position: absolute;left: 50%;top: 38px;
