--- a/css/about.css
+++ b/css/about.css
@@ -51,12 +51,13 @@
 	}
 	.intro h3{
 		font-size: 40px;
-		line-height: 37px;
+		line-height: 1.2;
 		color: #454545;
 	}
 	.h3-comment{
 		margin-top: 66px;
 		font-family: 16px;line-height: 30px;
+		text-align: left;
 	}
 	.intro .first-row{
 		margin-top: 182px;
@@ -69,8 +70,12 @@
 	}
 	.intro dl{
 		position: relative;
-		float: left;
-		width: 33%;
+		float: none;
+		width: 100%;
+		margin-top: 30px;
+	}
+	.intro dl:first-child{
+		margin-top: 0;
 	}
 	.intro dl dt{
 		position: absolute;
@@ -78,7 +83,8 @@
 	}
 	.intro dl dt,
 	.intro dl dd{
-		padding-right: 58px;
+		/*padding-right: 58px;*/
+		text-align: left;
 	}
 	.intro dt{
 		font-size: 20px;
@@ -100,7 +106,7 @@
 	}
 	.intro h4{
 		margin-top: 100px;
-		font-size: 36px;line-height: 30px;
+		font-size: 36px;line-height: 1.2;
 		text-align: left;
 	}
 	.intro h4:first-child{
@@ -109,6 +115,21 @@
 	.intro .h4-comment{
 		margin-top: 18px;
 		font-size: 16px;line-height: 30px;text-align: left;
+	}
+}
+@media(min-width: 992px){
+	.intro dl{
+		float: left;
+		width: 33%;
+		margin-top: 0;
+	}
+	.intro dl dt,
+	.intro dl dd{
+		padding-right: 58px;
+		text-align: center;
+	}
+	.h3-comment{
+		text-align: center;
 	}
 }
 /*ADAS ONE */
@@ -384,6 +405,13 @@
 	.contact .content-row p{
 		margin-top: 22px;
 		font-size: 16px;line-height: 25px;
+	}
+	.contact .content-row .addr span:before{
+		content: '';
+		display: inline-block;
+		margin: 0 16px;
+		width: 2px;height: 12px;
+		background: #969696;
 	}
 	.contact ul{
 		margin-top: 8px;
