--- a/css/basic.css
+++ b/css/basic.css
@@ -251,3 +251,36 @@ fieldset[disabled] .btn-link {
   text-decoration: underline;
   background-color: transparent;
 }
+
+.form-row{
+  position: relative;
+  margin-bottom: 5px;
+  padding: 10px 15px;
+  height: 27px;
+  font-size: 14px;
+  border: 1px solid #dadada;background: #fff
+}
+.inp-box{
+  display: block;
+  overflow: hidden;
+}
+.lbl{
+  position: absolute;left: 15px;top: 16px;
+  z-index: 2;
+  display: block;
+  text-align: left;
+  font-family: Arial, Helvetica;color: #888;font-size: 15px;line-height: 16px;
+}
+.inp{
+  position: relative;
+  z-index: 3;
+  margin: 0;
+  padding: 6px 0px 5px;
+  width: 100%;height: 16px;
+  font-family: Arial, Helvetica;font-size: 15px;line-height: 16px;
+  background: #fff;
+  border: 0 none;
+}
+.ie8 .lbl{
+  z-index: 4;
+}
