--- a/css/common.css
+++ b/css/common.css
@@ -112,7 +112,8 @@ h1 a{
 
 @media(min-width: 320px){
 	.gutter{
-		width: 100%
+		width: auto;
+		padding: 0 5px;
 	}
 	h1{
 		margin-left: 20px;
@@ -248,7 +249,8 @@ h1 a{
 }
 @media(min-width: 998px){
 	.gutter{
-		/*width: 100%*/
+		width: 100%;
+		padding: 0;
 	}
 	h1{
 		margin-left: 52px;
@@ -635,8 +637,8 @@ table{
 	.foot .location .map{
 		margin: 30px auto 0;
 		/*margin-left: -22px;*/
-		width: 320px;height: 155px;
-		background: url(../img/main/map_320.png) no-repeat left top;
+		width: auto;height: 155px;
+		background: url(../img/main/map_320.png) no-repeat center top;
 	}
 	.copyright{
 		font-size: 10px;
