--- a/css/common.css
+++ b/css/common.css
@@ -30,7 +30,7 @@ body{
 		padding: 21px 0 0 0;
 	}
 }
-@media(min-width: 998px){
+@media(min-width: 992px){
 	.head-top{
 		height: 64px;
 		padding: 56px 0 24px;
@@ -113,7 +113,7 @@ h1 a{
 @media(min-width: 320px){
 	.gutter{
 		width: auto;
-		padding: 0 5px;
+		padding: 0 15px;
 	}
 	h1{
 		margin-left: 20px;
@@ -247,11 +247,7 @@ h1 a{
 		background-position:-250px -190px;
 	}
 }
-@media(min-width: 998px){
-	.gutter{
-		width: 100%;
-		padding: 0;
-	}
+@media(min-width: 992px){
 	h1{
 		margin-left: 52px;
 		width:106px;height:46px;
@@ -328,7 +324,8 @@ h1 a{
 }
 @media(min-width: 1280px){
 	.gutter{
-		width: 1024px;
+		width: 1200px;
+		padding-left: 0;padding-right: 0;
 	}
 	h1{
 		margin-left: 52px;
@@ -512,11 +509,12 @@ table{
 @media(min-width: 640px){
 	
 }
-@media(min-width: 1054px){
+@media(min-width: 1024px){
 	.body{
 		padding-bottom: 60px;
 	}
 }
+
 
 /*------------    Foot    ------------*/
 .foot{
@@ -648,9 +646,6 @@ table{
 	.foot{
 		margin-top: 4px;
 	}
-	.foot .gutter{
-		width: 100%;
-	}
 	.foot-top{
 		height: 66px;
 		padding: 23px 0px 0;
@@ -682,7 +677,7 @@ table{
 		font-size: 12px;
 	}
 }
-@media(min-width: 998px){
+@media(min-width: 992px){
 	.foot{
 		margin-top: 0px;
 	}
@@ -721,7 +716,8 @@ table{
 }
 @media(min-width: 1280px){
 	.foot .gutter{
-		width: 1024px;
+		width: 1200px;
+		padding-left: 0;padding-right: 0;
 	}
 	.foot .location img{
 		margin-top: 15px;
